--- a/src/main/resources/fxml/skill/view/SkillMainView.fxml
+++ b/src/main/resources/fxml/skill/view/SkillMainView.fxml
@@ -61,7 +61,7 @@
                                                       <TextField fx:id="nameInEditorFx" alignment="CENTER" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                                    </children>
                                                 </GridPane>
-                                                <GridPane prefWidth="261.0">
+                                                <GridPane prefWidth="261.0" vgap="5.0">
                                                   <columnConstraints>
                                                     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="143.0" minWidth="100.0" prefWidth="100.0" />
                                                     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="199.0" minWidth="10.0" prefWidth="152.0" />
@@ -88,8 +88,14 @@
                                                       <Label text="Main target" />
                                                       <Label text="Sub-targets" GridPane.rowIndex="1" />
                                                       <ComboBox fx:id="mainTargetFx" prefWidth="150.0" GridPane.columnIndex="1" />
-                                                      <MultipleChoiceContainer fx:id="elementsFx" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                                                      <MultipleChoiceContainer fx:id="targetsFx" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                      <MultipleChoiceContainer fx:id="elementsFx" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                                         <padding>
+                                                            <Insets left="5.0" right="5.0" />
+                                                         </padding></MultipleChoiceContainer>
+                                                      <MultipleChoiceContainer fx:id="targetsFx" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                         <padding>
+                                                            <Insets left="5.0" right="5.0" />
+                                                         </padding></MultipleChoiceContainer>
                                                    </children>
                                                    <padding>
                                                       <Insets right="10.0" />
@@ -146,7 +152,7 @@
                                                       <Font name="System Bold" size="14.0" />
                                                    </font>
                                                 </Label>
-                                                <HBox alignment="CENTER" minWidth="400.0">
+                                                <HBox alignment="CENTER" minWidth="400.0" spacing="15.0">
                                                    <children>
                                                       <VBox alignment="CENTER">
                                                          <children>
@@ -166,7 +172,7 @@
                                                    <padding>
                                                       <Insets top="10.0" />
                                                    </padding></Label>
-                                                <MultipleChoiceContainer fx:id="skillsOnBeingActionFx" maxWidth="200.0" minWidth="400.0" prefHeight="100.0" prefWidth="400.0" />
+                                                <MultipleChoiceContainer fx:id="skillsOnBeingActionFx" maxWidth="200.0" minWidth="415.0" prefHeight="100.0" prefWidth="415.0" />
                                                 <HBox alignment="CENTER" spacing="30.0">
                                                    <children>
                                                       <RadioButton fx:id="onBeingActionCastToSelfFx" mnemonicParsing="false" selected="true" text="Cast to self">
@@ -241,6 +247,9 @@
                                              </padding>
                                           </HBox>
                                        </children>
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
                                     </VBox>
                                  </items>
                               </SplitPane>
@@ -262,6 +271,9 @@
                                           </Label>
                                           <MultipleChoiceContainerExtended fx:id="receiveItemsFx" minHeight="100.0" prefHeight="100.0" />
                                        </children>
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
                                     </VBox>
                                  </items>
                               </SplitPane>
@@ -316,14 +328,14 @@
                                                             <Label alignment="CENTER" text="Acts every" />
                                                             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
                                                                <children>
-                                                                  <TextField fx:id="actsEveryTurnFx" alignment="CENTER" disable="true" maxWidth="45.0" promptText="0" />
-                                                                  <Label disable="true" text="Turns  " />
+                                                                  <TextField fx:id="actsEveryTurnFx" alignment="CENTER" maxWidth="45.0" promptText="0" />
+                                                                  <Label text="Turns  " />
                                                                </children>
                                                             </HBox>
                                                             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="9.0">
                                                                <children>
-                                                                  <TextField fx:id="actsEveryMinuteFx" alignment="CENTER" disable="true" maxWidth="45.0" promptText="0" />
-                                                                  <Label disable="true" text="Minutes" />
+                                                                  <TextField fx:id="actsEveryMinuteFx" alignment="CENTER" maxWidth="45.0" promptText="0" />
+                                                                  <Label text="Minutes" />
                                                                </children>
                                                             </HBox>
                                                          </children>
@@ -379,14 +391,49 @@
                                                       <Insets bottom="5.0" top="5.0" />
                                                    </padding>
                                                 </Label>
-                                                <MultipleChoiceContainer fx:id="statsFx" minHeight="200.0" minWidth="350.0">
+                                                <MultipleChoiceContainer fx:id="statsFx" minHeight="150.0" minWidth="350.0">
                                                    <padding>
                                                       <Insets left="5.0" right="5.0" />
                                                    </padding>
                                                 </MultipleChoiceContainer>
+                                                <Label text="Buff coefficients:">
+                                                   <padding>
+                                                      <Insets top="10.0" />
+                                                   </padding></Label>
+                                                <HBox alignment="CENTER" minWidth="450.0" prefWidth="250.0" spacing="15.0">
+                                                   <children>
+                                                      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="220.0">
+                                                         <children>
+                                                            <Label text="Attack by attack type" textAlignment="CENTER" />
+                                                            <MultipleChoiceContainer fx:id="buffAttackTypeAtkFx" minHeight="85.0" />
+                                                            <Label text="Attack by being type" />
+                                                            <MultipleChoiceContainer fx:id="buffBeingTypeAtkFx" minHeight="85.0" />
+                                                            <Label text="Attack by element" />
+                                                            <MultipleChoiceContainer fx:id="buffElementAtkFx" minHeight="85.0" />
+                                                            <Label text="Attack by size" />
+                                                            <MultipleChoiceContainer fx:id="buffSizeAtkFx" minHeight="85.0" />
+                                                         </children>
+                                                      </VBox>
+                                                      <VBox alignment="CENTER" minWidth="150.0" prefHeight="200.0" prefWidth="220.0">
+                                                         <children>
+                                                            <Label text="Defence from attack type" />
+                                                            <MultipleChoiceContainer fx:id="buffAttackTypeDefFx" minHeight="85.0" />
+                                                            <Label text="Defence from being type" />
+                                                            <MultipleChoiceContainer fx:id="buffBeingTypeDefFx" minHeight="85.0" />
+                                                            <Label text="Defence from element" />
+                                                            <MultipleChoiceContainer fx:id="buffElementDefFx" minHeight="85.0" />
+                                                            <Label text="Defence from size" />
+                                                            <MultipleChoiceContainer fx:id="buffSizeDefFx" minHeight="85.0" />
+                                                         </children>
+                                                      </VBox>
+                                                   </children>
+                                                </HBox>
                                              </children>
                                           </VBox>
                                        </children>
+                                       <padding>
+                                          <Insets right="20.0" />
+                                       </padding>
                                     </HBox>
                                  </children>
                               </VBox>
