--- a/src/main/resources/fxml/skill/view/SkillMainView.fxml
+++ b/src/main/resources/fxml/skill/view/SkillMainView.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -21,7 +20,6 @@
 <?import ru.rdude.fxlib.boxes.SearchComboBox?>
 <?import ru.rdude.fxlib.containers.MultipleChoiceContainer?>
 <?import ru.rdude.fxlib.containers.MultipleChoiceContainerExtended?>
-<?import ru.rdude.fxlib.containers.TitledMultipleChoiceContainer?>
 <?import ru.rdude.fxlib.textfields.AutocomplitionTextField?>
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="skill.view.SkillMainViewController">
@@ -445,14 +443,6 @@
             </HBox>
       </content>
     </Tab>
-    <Tab closable="false" text="Visual">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <HBox fx:id="testBox" layoutX="277.0" layoutY="109.0" prefHeight="100.0" prefWidth="200.0" />
-                  <TitledMultipleChoiceContainer fx:id="testFx" layoutX="196.0" layoutY="78.0" prefHeight="62.0" prefWidth="259.0" visualElementType="PERCENT_TEXT_FIELD" />
-               </children></AnchorPane>
-      </content>
-    </Tab>
+    <Tab closable="false" text="Visual" />
   </tabs>
 </TabPane>
