first packer implementation (pack skillData), Json serializer moved to rpg game cuz it will be used to save games as well

--- a/src/main/resources/fxml/MainView.fxml
+++ b/src/main/resources/fxml/MainView.fxml
@@ -26,5 +26,11 @@
                </children></AnchorPane>
          </content>
       </Tab>
+       <Tab closable="false" text="Items" />
+       <Tab closable="false" text="Monsters" />
+       <Tab closable="false" text="Events" />
+       <Tab closable="false" text="Quests" />
+       <Tab closable="false" text="Modules" />
+       <Tab closable="false" text="Resources" />
    </tabs>
 </TabPane>
